Deployment/e2e/s3/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s3-insecure
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: "s3.ham.test"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: s3server
            port:
              number: 8333
  - host: "*.s3.ham.test"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: s3server
            port:
              number: 8333

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s3
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
    - 's3.ham.test'
    - '*.s3.ham.test'
    secretName: s3.ham.test
  rules:
  - host: "s3.ham.test"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: s3server
            port:
              number: 8333
  - host: "*.s3.ham.test"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: s3server
            port:
              number: 8333
